--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               </li>
                 <!-- - Advisor : Dr. Gail-Joon Ahn -->
                 --- Minor/Certificate: Cryptology
+                --- Honors: Summa Cum Laude (GPA: 3.83/4.0)
             </ul>
           </article>
         </div>
