--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 Bachelor of Science, Computer Science(Cybersecurity), Arizona State University, Tempe, AZ, August 2016 - May 2020
               </li>
                 <!-- - Advisor : Dr. Gail-Joon Ahn -->
-                --- Minor/Certificate: Cryptology
-                --- Honors: Summa Cum Laude (GPA: 3.83/4.0)
+                     --- Minor/Certificate: Cryptology
+                <br> --- Honors: Summa Cum Laude (GPA: 3.83/4.0)
             </ul>
           </article>
         </div>
