--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
 
         <p style="margin-left:40px">
-          GPG Key: <a href="GC_PK.asc" target="_blank"> My GPG public key </a> for <a href="mailto:gcao5@asu.edu">gcao5@asu.edu</a>
+          GPG Key: <a href="GC_PK.asc" target="_blank"> My GPG public key </a> for <a href="mailto:caoganyuan@gmail.com">caoganyuan@gmail.com</a>
         </p>
 
         <div class="flex">
