update research experience

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
       <div id = "content">
         <p style="margin-left:40px">
-          Hello ! I am Ganyuan Cao. I am a graduate from Arizona State University. I was a research associate at SEFCOM at Arizona State University.  
+          Hello ! I am Ganyuan Cao. I am a graduate from Arizona State University. I was a research associate at Laboratory of Security Engineering for Future Computing (SEFCOM) when I was at Arizona State University.  
         </p>
         <p style="margin-left:40px">
           My research interests include: 
               <ul>
-                <li>Computational Integrity & Privacy (CIP) algorithms such as ZKP and MPC, and their application on blockchain.</li>
+                <li>Succinct Computational Integrity & Privacy (SCIP) algorithms including non-interactive knowledge proof, and their application on blockchain.</li>
                 <li>Cryptographic protocols in distributed system.</li>
-                <li>Cryptographic primitives including Homomorphic Encryption, Secret Sharing, and etc.</li>
+                <li>Cryptographic algorithms including Homomorphic Encryption, Secret Sharing, and etc.</li>
               </ul>
         </p>
 
@@ -165,7 +165,7 @@
             <ul>
               <li>
                 Undergraduate Research Associate
-                at <a href="http://sefcom.asu.edu/" target="_blank">Security Engineering for Future Computing (SEFCOM) </a> - July 2017 ~ May 2020 <br>
+                at <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> - July 2017 ~ May 2020 <br>
               </li>
               --- Work on algorithms and protocols to increase the PoW blockchain mining efficiency while perserving the original security features.
               <hr>
