--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
         </p>
 
         <p style="margin-left:40px">
-          Email: <a href="mailto:gcao5@asu.edu">gcao5@asu.edu</a>,
-          <a href="mailto:caoganyuan@gmail.com">caoganyuan@gmail.com</a>
+          Email: <a href="mailto:caoganyuan@gmail.com">caoganyuan@gmail.com</a>
         </p>
 
         <p style="margin-left:40px">
-          GPG Key: <a href="GC_PK.asc" target="_blank"> My GPG public key </a> for <a href="mailto:caoganyuan@gmail.com">caoganyuan@gmail.com</a>
+          GPG Key: <a href="GC_PK.asc" target="_blank"> My GPG public key </a> <!-- for <a href="mailto:caoganyuan@gmail.com">caoganyuan@gmail.com</a> -->
         </p>
 
         <div class="flex">
