update reserach experience

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                       <li>Programming Languages: Python, C/C++, Java, Solidity</li>
                       <li>Mathematical Computation: Wolfram Mathematica, Pari/GP</li>
                       <li>OS & Framework: Linux, Docker</li>
-                      <li>Text Editing: LaTex</li>
+                      <li>Text Editing: LaTex, Markdown</li>
                     </ul>
                 </div>
       
@@ -166,7 +166,8 @@
                 Undergraduate Research Associate
                 at <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> - July 2017 ~ May 2020 <br>
               </li>
-              --- Work on algorithms and protocols to increase the PoW blockchain mining efficiency while perserving the original security features.
+              --- Design algorithms and protocols to increase the PoW blockchain mining efficiency while perserving the original security features.
+              <br>--- Evaluate performance of different blockchain consensus protocols including Proof-of-Work, Proof-of-Stake, and Byzantine Fault Tolerance protocols
               <hr>
             </ul>
           </article>
