update sop date

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <p style="margin-left:40px">
           Research Statement: [<a href="./cv/Ganyuan_Cao_Statement_of_Purpose.pdf">PDF</a>]
-          <small>(updated in Dec, 2019)</small>
+          <small>(updated in May, 2020)</small>
         </p>
 
         <p style="margin-left:40px">
@@ -167,7 +167,7 @@
                 at <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> - July 2017 ~ May 2020 <br>
               </li>
               --- Design algorithms and protocols to increase the PoW blockchain mining efficiency while perserving the original security features.
-              <br>--- Evaluate performance of different blockchain consensus protocols including Proof-of-Work, Proof-of-Stake, and Byzantine Fault Tolerance protocols
+              <br>--- Evaluate performance of different blockchain consensus protocols including Proof-of-Work, Proof-of-Stake, and Byzantine Fault Tolerance protocols.
               <hr>
             </ul>
           </article>
