--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <hr>
 
         <p style="margin-left:40px">
-          Curriculum Vitae: [<a href="./cv/Ganyuan_Cao_CV.pdf">PDF</a>]
+          Curriculum Vitae: [<a href="./person_intro/Ganyuan_Cao_CV.pdf">PDF</a>]
           <small>(updated in May, 2020)</small>
         </p>
 
         <p style="margin-left:40px">
-          Research Statement: [<a href="./cv/Ganyuan_Cao_Statement_of_Purpose.pdf">PDF</a>]
+          Research Statement: [<a href="./person_intro/Ganyuan_Cao_Statement_of_Purpose.pdf">PDF</a>]
           <small>(updated in May, 2020)</small>
         </p>
 
