--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div id = "content">
         <p style="margin-left:40px">
-          I am a graduate from Arizona State University. I was a research associate at  <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> when I was at Arizona State University.  
+          I am a graduate from Arizona State University. I was a undergraduate research associate at  <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> when I was at Arizona State University.  
         </p>
         <p style="margin-left:40px">
           My research interests include: 
