update my title

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <div id = "content">
         <p style="margin-left:40px">
           I am a graduate from Arizona State University. I was a undergraduate research associate at  <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> when I was at Arizona State University.  
+          
+          <br>
+          <br> I am in my gap year now and doing independent research. I am seeking a Ph.D./M.Sc student/researcher position in Computer Science with a concentration on Cryptography and Cybersecurity.
+
         </p>
         <p style="margin-left:40px">
           My research interests include: 
