--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </p>
 
         <p style="margin-left:40px">
-          GPG Key: <a href="GC_PK.asc" target="_blank"> My GPG public key </a> <!-- for <a href="mailto:caoganyuan@gmail.com">caoganyuan@gmail.com</a> -->
+          GPG Key: <a href="GC_PK.txt" target="_blank"> My GPG public key </a> <!-- for <a href="mailto:caoganyuan@gmail.com">caoganyuan@gmail.com</a> -->
         </p>
 
         <div class="flex">
