--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <br> <strong>The note has not been completed.</strong>  Symmetric Cryptosystems and Classic Ciphers will be updated.
                 <br> For current version, plese visit  <a href="./papers/a_brief_note_on_crypto.pdf" target="_blank">(link to Crypto note)</a>. 
                 <br> You can also access the note via IPFS at the hash: 
-                <br> <b>QmervuP4aHQqZaLe9GBNR4eNQh6kF6jt53c7QjQvXoew6B</b>
+                <br> <code>QmervuP4aHQqZaLe9GBNR4eNQh6kF6jt53c7QjQvXoew6B</code>
                 <br> Any advice is welcomed at my email !
               </article>
             </ul>
