--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 I am writing a note for theories in Cryptography. 
                 <br> This note includes some basic and advanced topics in Cryptography.
                 <br> The note also includes some knowledge in Number Theory, Abstract Algebra, and Elliptic Curves which is important for Cryptography.
-                <br> <strong>The note has not been completed.</strong>  Symmetric Cryptosystems and Classic Ciphers will be updated.
+                <br> <u>The note has not been completed.</u> Symmetric Cryptosystems and Classic Ciphers will be updated.
                 <br> For current version, plese visit  <a href="./papers/a_brief_note_on_crypto.pdf" target="_blank">(link to Crypto note)</a>. 
                 <br> You can also access the note via IPFS at the hash: 
                 <br> <code>QmervuP4aHQqZaLe9GBNR4eNQh6kF6jt53c7QjQvXoew6B</code>
@@ -142,15 +142,15 @@
               <h2>Articles, Publication & Posters</h2>
             </header>
             <ol>
-              <li>Xue, Tengfei, Yuyu Yuan, Zahir Ahmed, Krishna Moniz,<strong> Ganyuan Cao</strong>, and Cong Wang. "Proof of Contribution: A Modification of Proof of Work to Increase Mining Efficiency." In 2018 IEEE 42nd Annual Computer Software and Applications Conference (COMPSAC), pp. 636-644. IEEE, 2018.
+              <li>Xue, Tengfei, Yuyu Yuan, Zahir Ahmed, Krishna Moniz, <u>Ganyuan Cao</u>, and Cong Wang. "Proof of Contribution: A Modification of Proof of Work to Increase Mining Efficiency." In 2018 IEEE 42nd Annual Computer Software and Applications Conference (COMPSAC), pp. 636-644. IEEE, 2018.
                 <a href="https://ieeexplore.ieee.org/document/8377721" target="_blank">(link to paper)</a>
               </li>
               
-              <li><strong>Cao,Ganyuan</strong>. "Computational Problems For Designing Asymmetric Cryptosystems". 2019. Arizona State University, Bachelor's Research Paper.
+              <li><u>Cao,Ganyuan</u>. "Computational Problems For Designing Asymmetric Cryptosystems". 2019. Arizona State University, Bachelor's Research Paper.
                 <a href="./papers/Computational_Problems_For_Designing_Asymmetric_Cryptosystems.pdf" target="_blank">(link to paper)</a>
               </li>
               
-              <li><strong>Cao,Ganyuan</strong>. "Estafette : A Parallelized Block Generation Protocol to increase scalability of cryptocurrencies". In 2018 Arizona State University CryptoRally poster session.
+              <li><u>Cao,Ganyuan</u>. "Estafette : A Parallelized Block Generation Protocol to increase scalability of cryptocurrencies". In 2018 Arizona State University CryptoRally poster session.
                   <a href="./papers/estafette.pdf" target="_blank">(link to paper)</a>
               </li>
               <hr>
