--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </p>
 
         <p style="margin-left:40px">
-          Email: <a href="mailto:caoganyuan@gmail.com">caoganyuan@gmail.com</a>
+          Email: <a href="mailto:gy_cao@outlook.com">gy_cao@outlook.com</a>
         </p>
 
         <p style="margin-left:40px">
