--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
         <p style="margin-left:40px">
           Curriculum Vitae: [<a href="./person_intro/Ganyuan_Cao_CV.pdf">PDF</a>]
-          <small>(updated in May, 2020)</small>
+          <small>(last updated in Sept, 2020)</small>
         </p>
 
         <p style="margin-left:40px">
           Research Statement: [<a href="./person_intro/Ganyuan_Cao_Statement_of_Purpose.pdf">PDF</a>]
-          <small>(updated in May, 2020)</small>
+          <small>(last updated in Sept, 2020)</small>
         </p>
 
         <p style="margin-left:40px">
