update personal satement

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </p>
 
         <p style="margin-left:40px">
-          Research Statement: [<a href="./person_intro/Ganyuan_Cao_Statement_of_Purpose.pdf">PDF</a>]
+          Personal Statement: [<a href="./person_intro/Ganyuan_Cao_Statement_of_Purpose.pdf">PDF</a>]
           <small>(last updated in Sept, 2020)</small>
         </p>
 
