--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
         <p style="margin-left:40px">
           Curriculum Vitae: [<a href="./person_intro/Ganyuan_Cao_CV.pdf">PDF</a>]
-          <small>(last updated in Sept, 2020)</small>
+          <small>(last updated in Oct, 2020)</small>
         </p>
 
         <p style="margin-left:40px">
           Personal Statement: [<a href="./person_intro/Ganyuan_Cao_Statement_of_Purpose.pdf">PDF</a>]
-          <small>(last updated in Sept, 2020)</small>
+          <small>(last updated in Oct, 2020)</small>
         </p>
 
         <p style="margin-left:40px">
@@ -151,7 +151,7 @@
               </li>
               
               <li><u>Cao,Ganyuan</u>. "Estafette : A Parallelized Block Generation Protocol to increase scalability of cryptocurrencies". In 2018 Arizona State University CryptoRally poster session.
-                  <a href="./papers/estafette.pdf" target="_blank">(link to paper)</a>
+                  <a href="./papers/estafette.pdf" target="_blank">(link to poster)</a>
               </li>
               <hr>
               <hr>
