--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 <a href="https://ieeexplore.ieee.org/document/8377721" target="_blank">(link to paper)</a>
               </li>
               
-              <li><u>Cao,Ganyuan</u>. "Computational Problems For Designing Asymmetric Cryptosystems". 2019. Arizona State University, Bachelor's Research Paper.
-                <a href="./papers/Computational_Problems_For_Designing_Asymmetric_Cryptosystems.pdf" target="_blank">(link to paper)</a>
+              <li><u>Cao,Ganyuan</u>. "Computational Problems in Designing Asymmetric Cryptosystems". 2019. Arizona State University, Bachelor's Research Paper.
+                <a href="./papers/Computational_Problems_in_Designing_Asymmetric_Cryptosystems.pdf" target="_blank">(link to paper)</a>
               </li>
               
               <li><u>Cao,Ganyuan</u>. "Estafette : A Parallelized Block Generation Protocol to increase scalability of cryptocurrencies". In 2018 Arizona State University CryptoRally poster session.
