--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 Undergraduate Research Associate
                 at <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> - July 2017 ~ August 2018 <br>
               </li>
-              --- Design algorithms and protocols to increase the PoW blockchain mining efficiency while perserving the original security features.
+              --- Design algorithms and protocols to increase the PoW blockchain mining efficiency while preserving the original security features.
               <br>--- Evaluate performance of different blockchain consensus protocols including Proof-of-Work, Proof-of-Stake, and Byzantine Fault Tolerance protocols.
               <hr>
             </ul>
