update photo winter

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <hr \>
       <div id = "menu" style = "menu"> 
-        <img id = "me" alt="photo" align="left" src = "./images/profile.jpg" height ="250"> 
+        <img id = "me" alt="photo" align="left" src = "./images/profile_winter.jpg" height ="250"> 
       </div>
 
       <div id = "content">
