--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           I am a graduate from Arizona State University. I was a undergraduate research associate at  <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> when I was at Arizona State University.  
           
           <br>
-          <br> I am in my gap year now and doing independent research. I am seeking a Ph.D./M.Sc student/researcher position in Computer Science with a concentration on Cryptography and Cybersecurity.
+          <br> I will be joining EPFL as a Master student in Fall 2021.
 
         </p>
         <p style="margin-left:40px">
