--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <hr \>
       <div id = "menu" style = "menu"> 
-        <img id = "me" alt="photo" align="left" src = "./images/profile_winter.jpg" height ="250"> 
+        <img id = "me" alt="photo" align="left" src = "./images/profile_summer.jpg" height ="250"> 
       </div>
 
       <div id = "content">
@@ -48,7 +48,7 @@
 
         <p style="margin-left:40px">
           Curriculum Vitae: [<a href="./person_intro/Ganyuan_Cao_CV.pdf">PDF</a>]
-          <small>(last updated in Oct, 2020)</small>
+          <small>(last updated in June, 2021)</small>
         </p>
 
         <p style="margin-left:40px">
@@ -57,7 +57,7 @@
         </p>
 
         <p style="margin-left:40px">
-          Email: <a href="mailto:gycao@protonmail.com">gycao@protonmail.com</a>
+          Email: <a href="mailto:ganyuan.cao@epfl.ch">ganyuan.cao@epfl.ch</a>
         </p>
 
         <p style="margin-left:40px">
@@ -90,6 +90,13 @@
             <header>
               <h2>Education</h2>
             </header>
+            
+            <ul>
+              <li>
+                Master of Science, Informatique(Cybersecurity), EPFL, Lausanne, Switzerland, Expected September 2021 - July 2023
+              </li>
+            </ul>
+
             <ul>
               <li>
                 Bachelor of Science, Computer Science(Cybersecurity), Arizona State University, Tempe, AZ, August 2016 - May 2020
