--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
 
       <div id = "content">
         <p style="margin-left:40px">
-          I am a graduate from Arizona State University. I was an undergraduate research associate at  <a href="http://sefcom.asu.edu/" target="_blank">Laboratory of Security Engineering for Future Computing (SEFCOM) </a> when I was at Arizona State University.  
-          
-          <br>
-          <br> I will be joining EPFL as a Master student in Fall 2021.
+          I am a Master student in Computer Science - Cyber Security at EPFL. 
 
         </p>
         <p style="margin-left:40px">
